<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home_foreground"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_menu_calendar_foreground"
            android:title="@string/menu_calendar" />
        <item
            android:id="@+id/nav_studyspaces"
            android:icon="@drawable/ic_menu_browse_foreground"
            android:title="@string/menu_studyspaces" />
    </group>

    <item android:title="Connect">
        <menu>
            <item
                android:id="@+id/nav_manage"
                android:icon="@drawable/ic_menu_manage_foreground"
                android:title="@string/menu_manage" />
            <item
                android:id="@+id/nav_create"
                android:icon="@drawable/ic_menu_create_foreground"
                android:title="@string/menu_create" />
            <item
                android:id="@+id/nav_find"
                android:icon="@drawable/ic_menu_find_foreground"
                android:title="@string/menu_find" />
        </menu>
    </item>
    <item android:title="Friends">
        <menu>
            <item
                android:id="@+id/nav_friend"
                android:icon="@drawable/ic_face"
                android:title="@string/Friends" />
        </menu>
    </item>
    <item android:title="Help">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_settings_foreground"
                android:title="@string/menu_settings" />
        </menu>
    </item>

</menu>
